--- a/Test-Pierre/webApp/css/style.css
+++ b/Test-Pierre/webApp/css/style.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    margin-top: 75px;
 }
 
 body {
@@ -57,10 +57,28 @@ body {
     align-items: center;
 }
 
+.settings-container {
+    height: 200%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
 .toggle-view-container {
     background-color: #3f3f3f;
-    height: 100%;
-    width: 25%;
+    color: white;
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.toggle-orbit-container {
+    background-color: #443b3b;
+    color: white;
+    height: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +96,7 @@ body {
     margin: 3px;
 }
 
-.toggle-view-container>input[type="checkbox"] {
+.toggle-view-container>input[type="checkbox"], .toggle-orbit-container>input[type="checkbox"] {
     margin: 0px 15px;
 }
 
